namespace F1BettingApp.Domain.Enums;

public enum RaceStatus
{
    Scheduled,
    InProgress,
    Finished,
    ResultsProcessed,
    Cancelled,
    Postponed
}