@startuml admin-system-class-diagram
skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam shadowing false
skinparam ArrowColor #333333
skinparam ArrowThickness 1
skinparam RectanglePadding 10
skinparam classFontSize 12
skinparam classAttributeFontSize 10
skinparam classHeaderFontSize 12
skinparam packageFontSize 12
skinparam pageMargin 20
skinparam dpi 150


title Admin / System — Class Diagram

' ============================================
' FRONTEND (Angular)
' ============================================
package "Frontend (Angular)" {
  class "AdminSystemManagementComponent" {
    +races: AdminRaceDto[]
    +selectedRace: RaceDto | null
    +syncResult: SyncResultDto | null
    +isLoading: boolean
    +showCreateForm: boolean
    +showEditForm: boolean
    +showResultsForm: boolean
    +createForm: FormGroup
    +editForm: FormGroup
    +resultsForm: FormGroup
    +triggerSync(): void
    +loadRaces(): void
    +createRace(dto: CreateRaceDto): void
    +updateRaceMetadata(raceId: number, dto: UpdateRaceMetadataDto): void
    +overrideRaceResults(raceId: number, dto: OverrideRaceResultDto): void
    +deleteRace(raceId: number): void
    +getRaceResults(raceId: number): void
  }

  class "AdminRaceDto" {
    +id: number
    +name: string
    +raceDate: Date
    +status: RaceStatus
    +circuit: string
    +country: string
    +season: number
    +isManuallyOverridden: boolean
  }
}

' ============================================
' HTTP LAYER
' ============================================
package "HTTP Layer" {
  class "AuthInterceptor implements HttpInterceptor" {
    +intercept(req: HttpRequest, next: HttpHandler): Observable<HttpEvent>
    +attachBearerToken(req: HttpRequest): HttpRequest
    +isPublicEndpoint(url: string): boolean
  }
}

' ============================================
' BACKEND (C# API)
' ============================================
package "Backend (C# API)" {
  class "AdminController : ControllerBase" <<[Authorize(Roles = Admin)]>> {
    +_raceService: IRaceService
    +_logger: ILogger<AdminController>
    +POST /api/admin/sync(): Task<ActionResult<SyncResultDto>>
    +GET /api/admin/races/{raceId}/results(): Task<ActionResult<RaceResultDto>>
    +PUT /api/admin/races/{raceId}/results(): Task<ActionResult>
    +GET /api/admin/races(): Task<ActionResult<IEnumerable<RaceDto>>>
    +PUT /api/admin/races/{raceId}/metadata(): Task<ActionResult>
    +POST /api/admin/races(): Task<ActionResult<RaceDto>>
    +DELETE /api/admin/races/{raceId}(): Task<ActionResult>
  }
}

' ============================================
' APPLICATION LAYER
' ============================================
package "Application Layer" {
  interface "IRaceService" {
    +Task<RaceDto> GetRaceByIdAsync(id: int)
    +Task<IEnumerable<RaceDto>> GetAllRacesAsync()
    +Task<IEnumerable<RaceDto>> GetUpcomingRacesAsync()
    +Task<SyncResultDto> SyncRaceDataFromOpenF1Async()
    +Task<IEnumerable<RaceDto>> GetUpcomingRacesWithOddsAsync()
    +Task UpdateRaceStatusAsync(raceId: int, newStatus: RaceStatus)
    +Task<IEnumerable<RaceDto>> GetRacesByIdsAsync(ids: IEnumerable<int>)
    +Task<IEnumerable<DriverWithOddsDto>> GetDriversWithOddsForRaceAsync(raceId: int)
    +Task<IEnumerable<Result>> GetResultsAsync(raceId: int)
    +Task OverrideRaceResultAsync(raceId: int, dto: OverrideRaceResultDto)
    +Task<RaceResultDto> GetRaceResultDtoAsync(raceId: int)
    +Task UpdateRaceMetadataAsync(raceId: int, dto: UpdateRaceMetadataDto)
    +Task<RaceDto> CreateRaceAsync(dto: CreateRaceDto)
    +Task DeleteRaceAsync(raceId: int)
  }

  class "RaceService : IRaceService" {
    +_raceRepository: IRaceRepositoryExtensions
    +_resultRepository: IRepository<Result>
    +_driverRepository: IRepository<Driver>
    +_openF1ApiClient: IOpenF1ApiClient
    +_dbContext: AppDbContext
    +SyncRaceDataFromOpenF1Async(): Task<SyncResultDto>
    +OverrideRaceResultAsync(raceId: int, dto: OverrideRaceResultDto): Task
    +GetRaceResultDtoAsync(raceId: int): Task<RaceResultDto>
    +UpdateRaceMetadataAsync(raceId: int, dto: UpdateRaceMetadataDto): Task
    +CreateRaceAsync(dto: CreateRaceDto): Task<RaceDto>
    +DeleteRaceAsync(raceId: int): Task
    +GetAllRacesAsync(): Task<IEnumerable<RaceDto>>
    +GetRaceByIdAsync(id: int): Task<RaceDto>
    +GetUpcomingRacesAsync(): Task<IEnumerable<RaceDto>>
    +UpdateRaceStatusAsync(raceId: int, newStatus: RaceStatus): Task
    +GetResultsAsync(raceId: int): Task<IEnumerable<Result>>
    +CalculatePointsForPosition(position: int): int
    +GetOddsForDriver(race: Race, driverId: int): decimal
  }
}

' ============================================
' DOMAIN LAYER
' ============================================
package "Domain Layer" {
  class "Race" {
    +int Id { get; set; }
    +string Name { get; set; }
    +DateTime Date { get; set; }
    +RaceStatus Status { get; set; }
    +string Circuit { get; set; }
    +string Country { get; set; }
    +string OpenF1RaceId { get; set; }
    +int Season { get; set; }
    +decimal? TotalBets { get; set; }
    +decimal? TotalAmount { get; set; }
    +bool IsManuallyOverridden { get; set; }
    +Race(name, date, circuit, country, openF1RaceId, season)
    +CanPlaceBets(): bool
    +IsRaceFinished(): bool
    +OddsForDriver(driverId: int): decimal
  }

  class "Result" {
    +int Id { get; set; }
    +int RaceId { get; set; }
    +int DriverId { get; set; }
    +int? UserId { get; set; }
    +int Position { get; set; }
    +int Points { get; set; }
    +TimeSpan? FastestLap { get; set; }
    +TimeSpan? PitStopTime { get; set; }
    +Result(raceId, driverId, position, points, fastestLap, pitStopTime, userId)
    +IsPodiumFinish(): bool
    +IsPointsFinish(): bool
  }

  class "Driver" {
    +int Id { get; set; }
    +string Name { get; set; }
    +string Country { get; set; }
    +string OpenF1DriverId { get; set; }
    +int TeamId { get; set; }
    +Driver(name, country, openF1DriverId, teamId)
    +GetFullName(): string
  }

  class "Team" {
    +int Id { get; set; }
    +string Name { get; set; }
    +string Country { get; set; }
    +string OpenF1TeamId { get; set; }
    +Team(name, country, openF1TeamId)
    +GetDrivers(): string
  }

  class "Bet" {
    +int Id { get; set; }
    +int UserId { get; set; }
    +int RaceId { get; set; }
    +int DriverId { get; set; }
    +BetType BetType { get; set; }
    +decimal Amount { get; set; }
    +decimal Odds { get; set; }
    +decimal PotentialWinnings { get; set; }
    +decimal Winnings { get; set; }
    +BetStatus Status { get; set; }
    +DateTime CreatedAt { get; set; }
    +DateTime? ResolvedAt { get; set; }
    +Bet(userId, raceId, driverId, amount, betType, odds)
    +ValidateBet(): void
    +ResolveBet(): void
  }

  enum "RaceStatus" {
    Scheduled
    InProgress
    Finished
    ResultsProcessed
    Cancelled
    Postponed
  }

  enum "BetType" {
    // defined in domain
  }

  enum "BetStatus" {
    // defined in domain
  }
}

' ============================================
' INFRASTRUCTURE LAYER
' ============================================
package "Infrastructure Layer" {
  interface "IRepository<T>" as IRepo {
    +Task<T> GetByIdAsync(id: int)
    +Task<IQueryable<T>> GetAllAsync()
    +Task AddAsync(entity: T)
    +Task UpdateAsync(entity: T)
    +Task DeleteAsync(id: int)
    +Task<bool> ExistsAsync(id: int)
    +Task SaveChangesAsync()
    +Task AddAsyncNoBatch(entity: T)
    +Task UpdateAsyncNoBatch(entity: T)
    +Task DeleteAsyncNoBatch(id: int)
  }

  interface "IRaceRepositoryExtensions : IRepository<Race>" {
    +Task<IEnumerable<Race>> GetUpcomingRacesAsync()
    +Task<Race> GetRaceWithOddsAsync(id: int)
    +CanPlaceBets(race: Race): bool
    +Task<decimal?> GetTotalAmountWageredAsync(raceId: int)
    +Task<int?> GetTotalBetsCountAsync(raceId: int)
    +Task<IEnumerable<Race>> GetByIdsAsync(ids: IEnumerable<int>)
  }

  class "AppDbContext : DbContext" {
    +DbSet<Race> Races { get; set; }
    +DbSet<Result> Results { get; set; }
    +DbSet<Driver> Drivers { get; set; }
    +DbSet<Team> Teams { get; set; }
    +DbSet<Bet> Bets { get; set; }
    +DbSet<User> Users { get; set; }
    +OnModelCreating(modelBuilder): void
  }

  interface "IOpenF1ApiClient" {
    +Task<List<OpenF1Race>> GetRacesAsync()
  }
}

' ============================================
' DTOs
' ============================================
package "DTOs" {
  class "SyncResultDto" {
    +bool Success { get; set; }
    +int RacesProcessed { get; set; }
    +int RacesCreated { get; set; }
    +int RacesUpdated { get; set; }
    +string? ErrorMessage { get; set; }
    +DateTime SyncedAt { get; set; }
  }

  class "RaceDto" {
    +int Id { get; set; }
    +string Name { get; set; }
    +string Circuit { get; set; }
    +DateTime RaceDate { get; set; }
    +string Country { get; set; }
    +RaceStatus Status { get; set; }
    +int Season { get; set; }
    +string Flag { get; set; }
    +Dictionary<int, decimal> Odds { get; set; }
  }

  class "RaceResultDto" {
    +int RaceId { get; set; }
    +string RaceName { get; set; }
    +string Circuit { get; set; }
    +string Country { get; set; }
    +DateTime RaceDate { get; set; }
    +int WinnerDriverId { get; set; }
    +string WinnerDriverName { get; set; }
    +int WinnerTeamId { get; set; }
    +string WinnerTeamName { get; set; }
    +int FastestLapDriverId { get; set; }
    +string FastestLapDriverName { get; set; }
    +List<PositionDto> Positions { get; set; }
  }

  class "PositionDto" {
    +int Position { get; set; }
    +int DriverId { get; set; }
    +string DriverName { get; set; }
    +int TeamId { get; set; }
    +string TeamName { get; set; }
    +int Points { get; set; }
    +TimeSpan? FastestLap { get; set; }
    +TimeSpan? PitStopTime { get; set; }
  }

  class "OverrideRaceResultDto" {
    +List<PositionEntryDto> Positions { get; set; }
    +int? FastestLapDriverId { get; set; }
  }

  class "PositionEntryDto" {
    +int Position { get; set; }
    +int DriverId { get; set; }
  }

  class "CreateRaceDto" {
    +string Name { get; set; }
    +DateTime? Date { get; set; }
    +string Circuit { get; set; }
    +string Country { get; set; }
    +int Season { get; set; }
  }

  class "UpdateRaceMetadataDto" {
    +string? Name { get; set; }
    +DateTime? Date { get; set; }
    +string? Circuit { get; set; }
    +string? Country { get; set; }
    +RaceStatus? Status { get; set; }
  }

  class "DriverWithOddsDto" {
    +int DriverId { get; set; }
    +string DriverName { get; set; }
    +decimal Odds { get; set; }
  }
}

' ============================================
' RELATIONSHIPS
' ============================================

' Controller -> Service
AdminController ..> IRaceService : uses

' Service -> Repositories
RaceService ..> IRaceRepositoryExtensions : depends on
RaceService ..> IRepo : depends on (Result)
RaceService ..> IRepo : depends on (Driver)
RaceService ..> IOpenF1ApiClient : depends on
RaceService ..> AppDbContext : uses

' Service -> DTOs
RaceService --> SyncResultDto : returns
RaceService --> RaceDto : returns
RaceService --> RaceResultDto : returns
RaceService --> OverrideRaceResultDto : accepts
RaceService --> CreateRaceDto : accepts
RaceService --> UpdateRaceMetadataDto : accepts
RaceService --> DriverWithOddsDto : returns

' Domain relationships
Race "1" *-- "0..*" Result : has
Race "1" *-- "0..*" Bet : has
Driver "1" *-- "0..*" Bet : has
Driver "1" -- "1" Team : belongs to
Result "N" -- "1" Race : references
Result "N" -- "1" Driver : references
Result "N" -- "0..1" User : references

' Repository -> DbContext
IRaceRepositoryExtensions ..> AppDbContext : uses
IRepo ..> AppDbContext : uses

' AdminController -> DTOs
AdminController --> SyncResultDto : returns
AdminController --> RaceDto : returns
AdminController --> RaceResultDto : returns
AdminController --> OverrideRaceResultDto : accepts
AdminController --> CreateRaceDto : accepts
AdminController --> UpdateRaceMetadataDto : accepts

' Frontend -> Backend
AdminSystemManagementComponent ..> AdminController : calls via HTTP
AdminSystemManagementComponent --> AdminRaceDto : displays
AdminSystemManagementComponent --> SyncResultDto : shows result

' DTO -> Domain
PositionDto --> Driver : maps from
PositionDto --> Team : maps from
RaceResultDto --> Race : maps from
RaceResultDto --> Driver : maps from

@enduml
